templates/style.css
html * {
	margin: 0;
	padding: 0;
}

body {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	background: #333;
}

a {
	text-decoration: none;
	color: #333;
}

a:hover {
	border-bottom: 1px #999 dashed;
}
h1 {
	padding: 10px;
	font-size: 1.8em;
	margin-bottom: 0.5em;
	text-align: center;
}	

h1, h2, h3, h4 {
/*	margin-top: 20px;
	margin-bottom: 20px;*/
	margin: 10px auto;
}



/* form stuff */
input, select {
	background-color:#fff;
	color: #555;
}

input[type="button"], input[type="submit"]  {
        background-color: #f7f7f7;
        color: #000;
        border: 1px solid #999;
        border-top: 1px solid #ddd;
        border-left: 1px solid #ddd;
/*        font-weight: bold;*/
        margin-left: 2px;
        margin-right: 2px;
}

input[type="button"]:hover, input[type="submit"]:hover  {
        background-color: #fff;
        color: #000;
}
                                                                                                                                                             
input[type="button"]:active, input[type="submit"]:active {
        background-color: #eee;
        color: #000;
	border: 1px solid #999;
}

input[type="text"], input[type="password"], textarea, select { 
	background-color: #eee;
	border: 1px solid #ddd;
	padding:3px;
}

input[type="text"]:focus, input[type="password"]:focus, textarea:focus	{ 
	background-color: #fff; 
	border: 1px solid #ddd;
}

textarea {
	width: inherit;
}

/* comas stuff */



p.yacomas_error {        
	font-weight: bold;
	text-align: center;
	color: red;
}

p.yacomas_msg {
	font-weight:bold;
	text-align: center;
}

table.table-values {
	width: 400px;
}

table.table-values td.name {
	width: 180px;
/*	font-weight: normal;*/
}

td.name {
	text-align: right;
/*	font-weight: bold;*/
	background: #ddd;
/*	padding-right: 5px;*/
}

td.input, td.result {        
/*	padding-left: 10px;*/
}

td {
	padding: 0 5px;
}
td.result {
	color:darkslategray;
}


td.error {
	width: 20%;
}

tr.verde td {
	background: #066;
}

tr.rojo td {
	background: #e57272;
}
a.azul {
/*	color: #0066cc;
*/
	color: #000000;
	text-decoration: none;
}

a.azul:hover {
	color: #ffc20e;
	border-bottom: 1px dotted #3da8cc;
}
a.rojo {
	color: #0000FF;
	text-decoration: none;
}

a.rojo:hover {
	color: #CC0000;
	border-bottom: 1px dotted #3da8cc;
}
a.ponente {
	color: #900;
	text-decoration: none;
	font-size: 0.8em;
}

a.ponente:hover {
	border-bottom: 1px dotted #900;
}
a.precaucion {
	color: #600;
	text-decoration: none;
}

a.precaucion:hover {
	color: #CC0000;
	border-bottom: 1px dotted #3da8cc;
}
a.verde {
	color: #066;
	text-decoration: none;
}

a.verde:hover {
	color: #099;
	border-bottom: 1px dotted #3da8cc;
}

a.boton {
	color: #000000;
	text-decoration: none;
        background-color: #f7f7f7;
        font-weight: bold;
}

a.boton:hover {
	color: #000000;
	border-bottom: 1px dotted #3da8cc;
	background: #fff;
}

H4  { text-align: right }

div#login-info {
/*	font-weight:bold;*/
	text-align: right;
	margin-top: 0;
	margin-bottom: 0;

}
tr.table-headers {
	font-weight: bold;
	background-color: #600;
	color: white;
}

tr.even {
	background-color: #fdd;
}

tr.odd {
	background-color: #eee;
}

img {
	border: 0;
}

.center {
	text-align: center;
}

.error {
	color: #333;
}

.notice {
	color: #333;
	font-size: 0.8em;
	text-transform: italic;
}

.block {
	display: block;
	height: 50px;
}

#login-form {
/*	text-align: right;*/
}

table {
/*	width: 100%;*/
	border: 0;
	margin: 20px auto;
}

table.wide {
	width: 100%;
}


.column {
	float: left;
}

.clear {
	clear: both;
}

#container {
	margin: 0 auto;
	background: white;
	width: 730px;
}

ul {
	padding: 5px 20px 5px 40px;;
}

ul li {
	padding: 2px 0px 5px 4px;
}

p {
	line-height: 1.4em;
	margin: 4px;
}

#menuadmin {
	margin-top: 20px;
	display: block;
	width: 100%;
	height: 100%;
	margin-left: 70px;
}

#menuadmin h3 {
	color: #600;
	border-bottom: 1px #600 dashed;
	padding: 5px 0;
	margin: 10px 2px;
	overflow: hidden;
}

.menuadmin {
	width: 180px;
	height: 220px;
	margin: 0 20px;
}

.menuadmin ul {
	display:block;
	padding: 0;
}

#menuadmin li {
	display:block;
	margin: 0;
	padding: 0
}

#menuadmin li a {
	padding-top: 4px;
	padding-bottom: 4px;
}

#menuadmin h3, #menuadmin a {
	padding-left: 20px;
}

#menuadmin a {
	display: block;
}

#menuadmin a:hover {
        color: #fff;
        text-decoration: none;
		background: #600;
		border: none;
}


h3 {
	text-align: left;
}




#frontpage {
/*	font-size: 1.2em;*/
	line-height: 1.6em;
}

#frontpage p {
/*	padding: 10px; */
	margin: 0px;
}

#frontpage h3 {
	margin: 5px 0px;
}

select {
	min-width: 5em;
}

#ponente-details table {
	width: 60%;	
}

#ponente-details table tr td.name {
	width: 30%;
}

table.wide700 {
	width: 700px;
}

table.table1 {
	width: 550px;
}

td.table1-name {
	font-weight: bold;
	width: 150px;
}

td.table1-result {
	text-align: justify;
}

table.narrow {
	width: 60%;
	min-width: 600px;
}

td.narrow-name, table.narrow td.name {
	width: 25%;
	background: #ddd;
	text-align: right;
}

td.narrow-result {
	padding-left: 6px;
	background: #eee;
}

/*td.narrow-name,*/
td.narrow-result, td.result {
	padding: 0.2em;
	font: 1em/1.3em Georgia, "Times New Roman", Times, serif;
}


#content {
	padding: 0 50px;
	padding-bottom: 25px;
}

#content h1 {
	border-bottom: 1px #ccc dotted;
}

.small {
	font-size: 0.8em;
}

#header {
	height: 130px;
	background: #eee url('../images/logo.jpg') right no-repeat;
}

#header h1 {
	padding-top: 60px;
	width: 200px;
	text-align: left;
	float: left;
}

#frontpage p {
	text-align: justify;
/*	margin-left: 10px; */
}

#frontpage h2, #frontpage h3 {
	margin-top: 20px;	
}

p#buttons {
	padding: 10px 0 0 0;
	text-align: center;
}

#footer {
	margin: 0 0 15px 0;
	font-size: 0.7em;
	float: left;
	width: 100%;
}

#footer p {
	color: #fff;
	text-align: center;
	line-height: 1.2em;
}

#footer a {
	color: #fff;
	font-weight: bold;
}

#footer a:hover {
	text-decoration: none;
	border: none;
}



div#messages {
	border:1px solid #D3322A;
	background:#F7DAD8;
	color:#000;
	padding: 3px 50px;
	margin: 20px;
}

div#messages p{
	padding:0px;
	margin:2px;
}

div#messages ul li {
	margin: 0;
	padding: 0;
}

